src/objects/AppDynamics_University_Voucher__c.object
<CustomObject>
    <description>Track Vouchers and Library Cards sent to customers to use in View Central LMS</description>
    <fields>
        <fullName>Account_Id_18_digit__c</fullName>
        <formula>Account__r.Account_Id_18_digit__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Id 18 digit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The account associated to these Vouchers</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>AppDynamics University Vouchers</relationshipLabel>
        <relationshipName>AppDynamics_University_Vouchers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Realtions_Manager__c</fullName>
        <formula>Account__r.Customer_Relations_Manager__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Realtions Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expiration_Notice_Sent_del__c</fullName>
        <defaultValue>false</defaultValue>
        <description>A workflow updates this field based on if a 60 day expiration email was sent</description>
        <label>60 Expiration Notice Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Legacy_Voucher_Code__c</fullName>
        <description>CyberU Voucher Code- for reference</description>
        <label>Legacy Voucher Code</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Expiration_Date__c</fullName>
        <label>New Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>AppDynamics University Vouchers</relationshipLabel>
        <relationshipName>AppDynamics_University_Vouchers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Primary_Contact_Email__c</fullName>
        <formula>Primary_Contact__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Contact Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is the Primary Contact from the Opportunity Contact Role.</description>
        <label>Primary Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>AppDynamics University Vouchers</relationshipLabel>
        <relationshipName>AppDynamics_University_Vouchers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Purchase_Price__c</fullName>
        <formula>Purchased_Quantity__c *400</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Purchase Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Purchased_Quantity__c</fullName>
        <description>The number of vouchers or Library cards purchased</description>
        <label>Purchased Quantity</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Remaining_Units__c</fullName>
        <description>The number of voucher units remaining</description>
        <label>Remaining Units</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Type of Voucher</description>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Training Units</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Library Cards</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Units_Used__c</fullName>
        <description>The number of voucher units or Library Cards used</description>
        <label>Units Used</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Voucher_Booked_Date__c</fullName>
        <description>The date the Opportunity was booked for the vouchers</description>
        <formula>Opportunity__r.Booked_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Voucher Booked Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Voucher_Code__c</fullName>
        <formula>TRIM(RIGHT(Opportunity__r.Id, 6))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Voucher Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Voucher_Expiration_Date_2__c</fullName>
        <label>Voucher Expiration Date 2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Voucher_Expiration_Date__c</fullName>
        <formula>BLANKVALUE(New_Expiration_Date__c, Opportunity__r.Start_Date__c + 365)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Voucher Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>X90_Day_Expiration_Notice_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>A workflow updates this field based on if a 90 day expiration email was sent</description>
        <label>90 Day Expiration Notice Sent</label>
        <type>Checkbox</type>
    </fields>
    <label>AppDynamics University Voucher</label>
    <listViews>
        <fullName>Library_Cards</fullName>
        <columns>Account__c</columns>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Purchased_Quantity__c</columns>
        <columns>Remaining_Units__c</columns>
        <columns>Primary_Contact__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Voucher_Booked_Date__c</columns>
        <columns>Voucher_Expiration_Date__c</columns>
        <columns>Voucher_Code__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Library Cards,Training Units</value>
        </filters>
        <label>Training Units</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>AppDynamics University Voucher Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AppDynamics University Vouchers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>